test/asm/max-errors.err
error: Expected constant expression: PC is not constant at assembly time
    at max-errors.asm(3)
Assembly aborted after the maximum of 1 error! (configure with '-X/--max-errors')
